--- a/dev/html/index.html
+++ b/dev/html/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
 	<!--#insert file="includes/-header.html"-->
+	<!--#insert file="includes/-main.html"-->
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="js/jquery.selectric.min.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
