--- a/dev/html/index.html
+++ b/dev/html/index.html
@@ -9,6 +9,7 @@
 <body>
 	<!--#insert file="includes/-header.html"-->
 	<!--#insert file="includes/-main.html"-->
+	<!--#insert file="includes/-modal.html"-->
 	<!--#insert file="includes/-footer.html"-->
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
