--- a/dev/html/index.html
+++ b/dev/html/index.html
@@ -5,6 +5,9 @@
 	<title>Document</title>
 	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" type="text/css" href="css/general.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="js/jquery.selectric.js"></script>
+  <script src="js/main.js"></script>
 </head>
 <body>
 	<!--#insert file="includes/-header.html"-->
@@ -12,8 +15,6 @@
 	<!--#insert file="includes/-modal.html"-->
 	<!--#insert file="includes/-footer.html"-->
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="js/jquery.selectric.min.js"></script>
-  <script src="js/main.js"></script>
+
 </body>
 </html>
